@@ -5,6 +5,6 @@ std_opts = "--no-source --color --format pretty" # Cucumber::Formatter::Fuubar"
 default: DRIVER=WATIR <%= std_opts %> --tags ~@selenium_only
 watir_webdriver: DRIVER=WATIR <%= std_opts %> --tags ~@selenium_only
 selenium_webdriver: DRIVER=SELENIUM <%= std_opts %> --tags ~@watir_only
-focus: DRIVER=WATIR <%= std_opts %> --tags ~@selenium_only --tags @focus
-#focus:  DRIVER=SELENIUM <%= std_opts %> --tags ~@watir_only --tags @focus
+#focus: DRIVER=WATIR <%= std_opts %> --tags ~@selenium_only --tags @focus
+focus:  DRIVER=SELENIUM <%= std_opts %> --tags ~@watir_only --tags @focus
 
