@@ -10,6 +10,12 @@ Feature: Handling frames
     Then I should verify "page-object" is in the text field for frame 2 using "index"
     #And I should be able to get the text fields text from frame 2 using "index"
 
+@watir_only    
+  Scenario: Accessing elements withing the frame using Regexp
+    Given I am on the frame elements page
+    When I type "page-object" into the text field for frame 2 using "regex"
+    Then I should verify "page-object" is in the text field for frame 2 using "regex"
+
   Scenario: Switching between frames
     Given I am on the frame elements page
     When I type "page-object" into the text field for frame 2 using "id"
